--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
   
     <script  src="js/index.js"></script>
-    <p>Hello World, we are software developers!</p>
+    <h1 id ="title">Survey Form</h1>
+    <p id = "description">This is a survey form for the next task. Follow the instrustions thorouhgly</p>
+    <form id ="survey-form">
+      <label for="name">Name:</label>
+      <input id ="name" type ="text" name ="name" required>
+      <label for="email">E-Mail:</label>
+      <input id ="email" type ="email" name ="email" required>
+      <label for="number">Number:</label>
+      <input id ="number" type ="number" name ="number" required>
+
+    </form>
   </body>
 </html>
